Task-5-Solution/prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.yagmurana.info
      http:
        paths:
          - backend:
              service:
                name: kubeprostack-kube-promethe-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix

    - host: grafana.yagmurana.info
      http:
        paths:
          - backend:
              service:
                name: kubeprostack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
